test/MC/SVE/regression-tests/negative_tests/sve-cpy-015.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecS16DupIZ
// Immediate not compatible with encode/decode function.
cpy z22.h, p12/z, #32513
// CHECK: error: immediate must be an integer in range [-128, 127] or a multiple of 256 in range [-32768, 32512]
